data/forge_javadoc/1.7.10/raw/net/minecraft/entity/monster/EntityBlaze.md
---
title: "EntityBlaze"
description: "public class EntityBlaze extends EntityMob"
package: "net/minecraft/entity/monster"
version: "1.7.10"
forgeBuild: "10.13.4.1614"
fetchedWith: "c4-2026-09-22"
source: "https://skmedix.github.io/ForgeJavaDocs/javadoc/forge/1.7.10-10.13.4.1614/net/minecraft/entity/monster/EntityBlaze.html"
sourceType: javadoc
---

# EntityBlaze

**Inheritance:** java.lang.Object → net.minecraft.entity.Entity → net.minecraft.entity.EntityLivingBase → net.minecraft.entity.EntityLiving → net.minecraft.entity.EntityCreature → net.minecraft.entity.monster.EntityMob → net.minecraft.entity.monster.EntityBlaze

## Class signature

```java
public class EntityBlaze extends EntityMob
```

## Methods

- `protected void applyEntityAttributes()`
- `protected void attackEntity(Entity p_70785_1_, float p_70785_2_)`
- `protected void dropFewItems(boolean p_70628_1_, int p_70628_2_)`
- `protected void entityInit()`
- `protected void fall(float p_70069_1_)`
- `void func_70844_e(boolean p_70844_1_)`
- `boolean func_70845_n()`
- `float getBrightness(float p_70013_1_)`
- `int getBrightnessForRender(float p_70070_1_)`
- `protected java.lang.String getDeathSound()`
- `protected Item getDropItem()`
- `protected java.lang.String getHurtSound()`
- `protected java.lang.String getLivingSound()`
- `boolean isBurning()`
- `protected boolean isValidLightLevel()`
- `void onLivingUpdate()`

## Fields

- `EntityBlaze`
